# kubeapps

./: .angular-cli.json  .dccache  .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .licenserc.yaml  .travis.yml  .yamllint.yml  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Gopkg.toml  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  Untitled-1.sh  aaa.html  aaa.txt  apprepository.jsonnet  chartsvc.jsonnet  controller.go  deploy.sh  docker-compose.debug.yml  docker-compose.yml  glide.yaml  go.mod  go.sum  handler.go  ingress-nginx.jsonnet  karma.conf.js  kube-api.jsonnet  kubeapps-dashboard-values.yaml  kubeapps-dashboard.jsonnet  kubeapps-hub-values.yaml  (+20 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-proposal.md  feature-request.md  feature_request.md  issue.md  proposal-request.md  support-request.md
.github/workflows/: add-issues-to-project.yaml  ci-custodian-rules.yaml  codeql-analysis.yml  codeql-reusable.yml  codeql-scheduled.yml  gke_e2e_tests.yaml  golangci-lint.yaml  kubeapps-full-integration.yaml  kubeapps-general.yaml  kubeapps-main-reusable.yaml  kubeapps-main.yaml  kubeapps-release.yml  kubeapps-sync-chart-from-bitnami.yaml  kubeapps-sync-chart-to-bitnami.yaml  kubeapps.yaml  license-headers.yaml  linters.yml  test-workflow.yml
Godeps/: Godeps.json
artifacts/examples/: crd.yaml  example-apprepo.yaml
chart/: kubeapps-3.5.3.tgz
chart/kubeapps/: Chart.yaml  README.md  requirements.yaml  values.schema.json  values.yaml
chart/kubeapps-dashboard/: Chart.yaml  README.md  requirements.yaml  values.yaml
cmd/: dashboard.go  dashboard_test.go  down.go  fs.go  installer.go  output_validate.go  root.go  root_test.go  test_conf.json  up.go  up_test.go  validate.go  validations.go  version.go
cmd/api-gateway/: gateway.go  gateway_main.go
cmd/apprepository-controller/: .gitignore  Dockerfile  README.md  controller.go  controller_test.go  main.go  main_test.go
cmd/apprepository-controller-new/: .gitignore  Dockerfile  PROJECT  README.md  go.mod  go.sum  main.go  script.txt
cmd/asset-syncer/: .gitignore  Dockerfile  delete.go  helm.go  invalidate-cache.go  main.go  mongodb_db_test.go  mongodb_utils.go  mongodb_utils_test.go  postgresql_db_test.go  postgresql_utils.go  postgresql_utils_test.go  sync.go  types.go  utils.go  utils_test.go  version.go
cmd/assetsvc/: Dockerfile  handler.go  handler_test.go  main.go  main_test.go  mongodb_utils.go  postgres_db_test.go  postgresql_utils.go  postgresql_utils_test.go  utils.go
cmd/chart-repo/: .gitignore  Dockerfile  Gopkg.toml  add.go  chart_repo.go  delete.go  sync.go  types.go  utils.go  utils_test.go  version.go
cmd/chart-repo-sync/: Gopkg.toml  addRepo.go  deleteRepo.go  sync.go  sync_test.go  types.go  utils.go
cmd/chartsvc/: .gitignore  Dockerfile  README.md  handler.go  handler_test.go  main.go  main_test.go
cmd/helmer/: Dockerfile  main.go
cmd/kubeapps-api-service/: Makefile  README  README.md  buf.gen.yaml  buf.yaml  main.go
cmd/oci-catalog/: .gitignore  Cargo.toml  Dockerfile  buf.gen.yaml  buf.yaml  build.rs
cmd/oci-catalog/proto/: ocicatalog.proto
cmd/oci-catalog/proto/ocicatalog/v1alpha1/: ocicatalog.proto
cmd/oci-catalog/src/: cli.rs  main.rs
cmd/oci-catalog/src/providers/: dockerhub.rs  mod.rs
cmd/pinniped-proxy/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  build.rs
cmd/pinniped-proxy/src/: cache.rs  cli.rs  expired_value_cache.rs  https.rs  logging.rs  main.rs  pinniped.rs  proxy.rs  service.rs  tls_config.rs
cmd/pinniped-proxy/tests/: cli_tests.rs
cmd/pinniped-proxy/tests/cmd/: help.trycmd
dashboard/: -example-name.json  .dockerignore  .eslintrc.json  .gitignore  .prettierrc.js  .sass-lint.yml  .stylelintrc.json  Dockerfile  Makefile  README.md  craco.config.js  eslint.ci.json  kubeapps-3.6.0.tgz  package.json  tsconfig.json  tsconfig.prod.json  tsconfig.test.json  tslint.ci.json  tslint.json  yarn.diff
docker/: Dockerfile
docs/: README.md  access-control.md  authorization.md  ci_builds.md  components.md  config.example.yaml  dashboard.md  development.md  get-started.md  getting-started.md  install.md
e2e/: app.e2e-spec.ts  app.po.ts
integration/: .dockerignore  .eslintrc  .gitignore  .prettierrc.js  .snyk  Dockerfile  Makefile  args.js  e2e-pod.sh  global-setup.js  jest-puppeteer.config.js  jest.config.js  jest.environment.js  jest.sequencer.js  jest.setup.js  package-lock.json  package.json  playwright.config.js
lib/: kube.libsonnet
manifests/: README.md  apprepository.jsonnet  chartsvc.jsonnet  helm-crd.jsonnet  kube-api.jsonnet  kubeapps-dashboard.jsonnet  kubeapps.jsonnet  kubeapps.sh  kubeless-ui.jsonnet  kubeless.jsonnet  mongodb.jsonnet  nginx-vhost.conf  nginx.jsonnet  sealedsecret-crd.yaml  sealedsecret-tpr.yaml  tiller-deployment.jsonnet  tiller-proxy.jsonnet  user-roles.jsonnet
models/: chart.go
public/: index.html  manifest.json
rootfs/: Dockerfile
script/: PR_external_chart_template.md  PR_internal_chart_template.md  chart-museum.sh  chart-template-test.sh  chart_sync.sh  chart_sync_utils.sh  chart_upstream_checker.sh  cluster-kind.mk  cluster-openshift.mk  create-additional-kind-cluster.sh  create-kind-cluster.sh  create_release.sh  delete-harbor.sh  delete-kubeapps-harbor.sh  delete-kubeapps.sh  deploy-dev-for-pinniped.mk  deploy-dev.mk  e2e-test.sh  install-local-registry.sh  install-multicluster-deps.sh  install-nginx.sh  liblog.sh  libtest.sh  libutil.sh  load-kind-image.sh  local-docker-registry.sh  openshift-cluster.mk  release_notes.tpl  release_utils.sh  replace-with-current-copyright-year.sh  run_e2e_tests.sh  setup-harbor.sh  setup-kubeapps-harbor.sh  setup-kubeapps.sh  start-gke-env.sh
scripts/: sync-manifest.sh
site/: README.md  config.yaml  netlify.toml
src/: assets.d.ts  index.css  index.html  index.scss  index.tsx  polyfills.ts  styles.scss  theme.scss
static/: kubeapps-ns.yaml  kubeapps-objs.yaml
testutil/: mockstore.go
(+2647 files in other folders)
