# Copyright 2023 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "oci-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
futures-core = "0.3"
log = "0.4"
prost = "0.11"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.9"
url = "2.4"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
rstest = "0.18.1"
