# Copyright 2023 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "oci-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = "0.10"
futures-core = "0.3"
log = "0.4"
prost = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.10"
tonic-health = "0.10"
url = "2.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
rstest = "0.18.2"
