# Copyright 2023-2024 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "oci-catalog"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Kubeapps team <tanzu-kubeapps-team@vmware.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-core = "0.3"
log = "0.4"
prost = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.11"
tonic-health = "0.11"
url = "2.5"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
rstest = "0.22.0"
