# Copyright 2020-2022 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pinniped-proxy"
version = "0.0.0-devel"
license = "Apache-2.0"
authors = ["Kubeapps team <tanzu-kubeapps-team@vmware.com>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
cached = "0.39"
chrono = "0.4"
hyper = { version = "0.14", features = ["server"] }
hyper-tls = "0.5"
kube = { version = "0.75.0" }
kube-derive = { version = "0.75.0"}
kube-runtime = "0.75.0"
k8s-openapi = { version = "0.16.0", default-features = false}
log = "0.4"
native-tls = "0.2"
openssl = "0.10"
pretty_env_logger = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tls-listener = { version = "0.5", features = ["native-tls", "hyper-h1"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
url = "2.3"
http = "0.2.8"

[features]
default = ["v1_24"]

# k8s target version when compiling k8s-openapi
# See https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
v1_21 = ["k8s-openapi/v1_21"]
v1_22 = ["k8s-openapi/v1_22"]
v1_23 = ["k8s-openapi/v1_23"]
v1_24 = ["k8s-openapi/v1_24"]

[dev-dependencies]
tokio-test = "0.4"
serial_test = "0.9"
