# Copyright 2020-2023 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pinniped-proxy"
version = "0.0.0-devel"
license = "Apache-2.0"
authors = ["Kubeapps team <tanzu-kubeapps-team@vmware.com>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
# In chrono 0.4, the dependency on time 0.1 is used by default, but can be
# disabled by switching the default features off. The dependency on the old time
# module will be removed in 0.5: https://github.com/chronotope/chrono/issues/876
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
env_logger = "0.10"
hyper = { version = "0.14", features = ["server"] }
hyper-tls = "0.5"
kube = { version = "0.87.1" }
kube-derive = { version = "0.86.0"}
kube-runtime = "0.86.0"
k8s-openapi = { version = "0.20.0", default-features = false}
log = "0.4"
native-tls = "0.2"
openssl = "0.10"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tls-listener = { version = "0.8", features = ["native-tls", "hyper-h1"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
url = "2.4"
http = "0.2.9"
clap = { version = "4.4", features = ["derive", "env"] }

[features]
default = ["v1_24"]

# k8s target version when compiling k8s-openapi
# See https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
v1_22 = ["k8s-openapi/v1_22"]
v1_23 = ["k8s-openapi/v1_23"]
v1_24 = ["k8s-openapi/v1_24"]

[dev-dependencies]
tokio-test = "0.4"
trycmd = "0.14"
temp-env = "0.3"
