# Copyright 2020-2024 the Kubeapps contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pinniped-proxy"
version = "0.0.0-devel"
license = "Apache-2.0"
authors = ["Kubeapps team <tanzu-kubeapps-team@vmware.com>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# In chrono 0.4, the dependency on time 0.1 is used by default, but can be
# disabled by switching the default features off. The dependency on the old time
# module will be removed in 0.5: https://github.com/chronotope/chrono/issues/876
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
env_logger = "0.11"
hyper = { version = "0.14", features = ["server"] }
hyper-tls = "0.5"
kube = { version = "0.88.1" }
kube-derive = { version = "0.88.1" }
kube-runtime = "0.88.1"
k8s-openapi = { version = "0.21.1", default-features = false }
log = "0.4"
native-tls = "0.2"
openssl = "0.10"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tls-listener = { version = "0.8", features = ["native-tls", "hyper-h1"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
url = "2.5"
http = "0.2.11"
clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = ["v1_27"]

# k8s target version when compiling k8s-openapi
# See https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
v1_27 = ["k8s-openapi/v1_27"]
v1_28 = ["k8s-openapi/v1_28"]
v1_29 = ["k8s-openapi/v1_29"]

[dev-dependencies]
tokio-test = "0.4"
trycmd = "0.15"
temp-env = "0.3"
